<resources>
    <string name="app_name">Define</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="wordnet_database_dir">wordnet.database.dir</string>

    <string name="word">Lorem Ipsum</string>
    <string name="selection">Voilà! In view, a humble vaudevillian veteran, cast vicariously as both victim and villain by the vicissitudes of fate.</string>
    <string name="copy_something">Copy something you don\'t understand</string>
    <!-- Content Descriptions-->
    <string name="content_description_copy">Copy</string>
    <string name="content_description_google">Google</string>

    <string name="ok">Yes</string>
    <string name="cancel">No</string>
    <string name="copy">copy</string>
    <string name="close">CLOSE</string>

    <string name="btn_download_data">DOWNLOAD DATA</string>
    <string name="btn_cancel_download">CANCEL DOWNLOAD</string>
    <string name="btn_find_meaning">FIND MEANING</string>
    <string name="hint_type_here">Type the word here</string>

    <string name="label_synonyms">synonyms : </string>
    
    <string name="btn_set_american">AMERICAN</string>
    <string name="btn_set_british">BRITISH</string>

    <string name="hint_multiple_words_selected">Multiple words selected. Click to choose a single word</string>
    <string name="hint_no_meaning">No meaning found</string>
    <string name="hint_tap_to_select">Tap to select a word. Swipe for a fine tuned selection</string>

    <string name="silent_mode">Silent Mode</string>

    <!-- Debug-->
    <string name="action_test">Test</string>
    <string name="label_toggles">Toggles</string>
    <string name="label_ui_service">UI Service</string>
    <string name="label_notification_only">Notification Only</string>

    <!-- Notification Strings -->
    <!-- Unzip notification -->
    <string name="unzip_noti_title">Unzipping dictionary</string>
    <string name="unzip_noti_finish_title">Finished unzipping dictionary</string>
    <string name="title_livio_dictionary">Livio Dictionary</string>
    <string name="description_livio_dictionary">The free offline English dictionary app based on English Wiktionary</string>
    <string name="btn_install_livio">INSTALL LIVIO</string>
    <string name="exception_livio">Livio is not installed on your device</string>
    <string name="exception_urban">Unable to fetch data from Urban Dictionary servers. Please check your network connection.</string>
    <string name="exception_wordnet">Unable to load wordnet dictionary. Make sure you have downloaded wordnet dictionary</string>
    <string name="title_wordnet_dictionary">Wordnet Dictionary</string>
    <string name="description_wordnet_dictionary">A minimal english dictionary with usages and synonyms. Download size 10MB.</string>
    <string name="title_urban_dictionary">Urban Dictionary</string>
    <string name="description_urban_dictionary">Urban Dictionary is a crowdsourced online dictionary of slang words and phrases. It requires internet to use this dictionary.</string>
    <string name="get_offline_dictionaries">Get offline dictionaries</string>
    <string name="online_dictionaries">Online dictionaries</string>
    <string name="btn_download_wordnet_dictionary">DOWNLOAD WORDNET</string>
    <string name="pref_name_notification">How would you like define to notify you?</string>
    <string name="pref_other_settings">Other settings</string>
    <string name="option_silent">Silent Notification</string>
    <string name="option_priority">Priority Notification</string>
    <string name="option_direct">Direct Popup</string>
    <string name="activity_settings">Settings</string>
    <string name="title_activity_tutorial">TutorialActivity</string>

    <!-- Meaning Notification -->
    <string name="notification_content">Click to view meaning</string>

    <string name="dashboard_dictionaries">Dictionaries</string>
    <string name="dashboard_tutorial">Tutorial</string>
    <string name="dashboard_sort_dictionaries">Sort Dictionaries</string>
    <string name="dashboard_settings">Settings</string>
    <string name="dashboard_permissions">Permissions</string>

    <string name="menu_next">Next</string>

    <string name="reorder_or_remove_dictionaries">Reorder or remove tabs</string>

    <string name="share_using">Share using</string>

    <string name="button_test">TEST</string>
    <string name="button_search">SEARCH</string>
    <string name="button_copy">COPY</string>
    <string name="button_wiki">WIKI</string>

    <string name="notify_tutorial_silent">Most unobtrusive setting. Whenever a text is copied a silent notification is shown. Tap on notification to define</string>
    <string name="notify_tutorial_priority">Recommended setting for Lollipop and above. Whenever a text is copied a priority notification is shown. Tap on notification to define</string>
    <string name="notify_tutorial_direct">A cancellable popup is directly shown whenever text is copied</string>

    <string name="notification_auto_hide">Auto hide notifications after 10s</string>
    <string name="notification_clip_service">If Define is not triggered every time you copy, turn on this notification to ensure consistency.</string>

    <string name="ensure_foreground">Ensure app stays alive</string>
    <string name="adds_permanent_notification">Adds a permanent notification without icon</string>

    <!-- Permissions-->
    <string name="permissions_page_description">For optimal performance we need the following permissions. Grant the required permissions for the app to function as expected</string>
    <string name="permissions_page_title">Permissions</string>
    <string name="button_grant">GRANT PERMISSION</string>
    <string name="button_granted">GRANTED</string>
    <string name="button_lollipop">LOLLIPOP AND BELOW</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_go_to_settings">GO TO SETTINGS</string>
    <string name="permission_required">(required)</string>
    <string name="permission_optional">(optional)</string>
    <string name="permission_title_draw_over_other_apps">Draw over other apps</string>
    <string name="permission_rationale_draw_over_other_apps">To show meanings without moving you from the app you are using</string>
    <string name="permission_request_message_draw_over_other_apps">We need draw over other permission to without moving you from the app you are using</string>
    <string name="permission_title_storage">Storage</string>
    <string name="permission_rationale_storage">To store dictionary for offline use</string>
    <string name="permission_request_message_storage">We need storage permission to store dictionary for offline use.
        Go to settings -> Permissions -> Enable Storage</string>
    <string name="permission_title_phone">Read phone state</string>
    <string name="permission_rationale_phone">To hide overlays when you receive a call</string>
    <string name="permission_request_message_phone">We will remove the overlays when you receive a call to allow you to answer it.
    Go to settings -> Permissions -> Enable Phone</string>
    <string name="permission_title_unknown">Unknown</string>
    <string name="permission_rationale_unknown">We do not need this</string>
    <string name="permission_request_message_unknown">Ignore this message</string>

    <!-- Portal library strings -->
    <string name="overlay_permission_denied">Draw over other apps permission denied. Define will not work. Please go to the app to change this.</string>
    <string name="overlay_permission_notification">Need additional permissions to show meanings</string>
    <string name="overlay_permission_rationale">Define needs this permission to show the meanings on top of the current app, without having to navigate you from it.</string>
    <string name="overlay_permission_granted_notification">Permission granted, tap to define</string>
    <string name="foreground_notification">Showing meanings. Tap to close</string>
    <string name="clip_service_notification">Waiting for words to define</string>
</resources>
