<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <in.workarounds.typography.TextView
        android:id="@+id/tv_pref_name_notification"
        android:text="@string/pref_name_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <in.workarounds.typography.RadioButton
            android:id="@+id/rb_option_silent"
            android:text="@string/option_silent"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <in.workarounds.typography.RadioButton
            android:id="@+id/rb_option_priority"
            android:text="@string/option_priority"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <in.workarounds.typography.RadioButton
            android:id="@+id/rb_option_direct"
            android:text="@string/option_direct"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </RadioGroup>

</LinearLayout>