<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <in.workarounds.typography.TextView
        app:font_variant="Semibold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F3F3F3"
        android:padding="@dimen/padding_medium"
        android:text="@string/online_dictionaries"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="@dimen/font_regular" />

    <RelativeLayout
        android:id="@+id/urban_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/padding_regular"
        android:paddingStart="@dimen/padding_regular">

        <in.workarounds.typography.TextView
            android:id="@+id/tv_urban_title"
            app:font_variant="semibold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_medium"
            android:text="@string/title_urban_dictionary"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/font_medium" />

        <in.workarounds.typography.TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/tv_urban_title"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:maxWidth="320dp"
            android:text="@string/description_livio_dictionary" />
    </RelativeLayout>


</LinearLayout>