<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include android:id="@+id/toolbar"
        layout="@layout/layout_toolbar" />
    <LinearLayout
        android:id="@+id/dictionaries_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:background="?android:selectableItemBackground"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_book"
            android:tint="@color/dark_gray"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/padding_regular"
            android:text="@string/dashboard_dictionaries"
            android:textSize="@dimen/font_regular"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lighter_gray"/>
    <LinearLayout
        android:id="@+id/tutorial_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:background="?android:selectableItemBackground"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="6dp"
            android:src="@drawable/ic_play_arrow"
            android:tint="@color/dark_gray"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/padding_regular"
            android:text="@string/dashboard_tutorial"
            android:textSize="@dimen/font_regular"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lighter_gray"/>
    <LinearLayout
        android:id="@+id/settings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_regular"
        android:background="?android:selectableItemBackground"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_settings"
            android:tint="@color/dark_gray"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/padding_regular"
            android:text="@string/dashboard_settings"
            android:textSize="@dimen/font_regular"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>